tests/error/comptime/pointer_difference06.bz
// error: invalid pointer difference operation with type '*int32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different subobjects in this stack object
// note: lhs address is a one-past-the-end pointer with offset 4
// note: rhs address points to a subobject at offset 4
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let t = [int32, int32]();
		(&t[0] + 1) - &t[1];
	});
}
